--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+springdoc.api-docs.path=/api-docs/odee-docs
 
+springdoc.swagger-ui.path=/swagger-odee-ui.html
+springdoc.swagger-ui.groups-order=desc
+springdoc.swagger-ui.tags-sorter=alpah
+springdoc.swagger-ui.operations-sorter=method
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.display-request-duration=true
+
+springdoc.default-consumes-media-type=application/json
+springdoc.default-produces-media-type=application/json
