setting: Supabase(PosgreSQL) DB connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ springdoc.swagger-ui.display-request-duration=true
 
 springdoc.default-consumes-media-type=application/json
 springdoc.default-produces-media-type=application/json
+
+spring.datasource.hikari.maximum-pool-size=4
+spring.datasource.url=jdbc:postgresql://db.hrmenyjgbckmmgzefgny.supabase.co:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=1mph1eaGYbkB0wh2
