--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ spring.datasource.hikari.maximum-pool-size=4
 spring.datasource.url=jdbc:postgresql://db.hrmenyjgbckmmgzefgny.supabase.co:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=1mph1eaGYbkB0wh2
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+spring.jpa.database=postgresql
+spring.jpa.hibernate.ddl-auto=update
